K1J-1538: Add ValidSickLeaveAggregator to filter valid sick leave certificates.